test/sema/tuple-mismatching-element-name.delta
// RUN: %not %delta -typecheck %s | %FileCheck %s

(int a, int b) f() {
    // CHECK: [[@LINE+1]]:5: error: mismatching return type '(int a, int c)', expected '(int a, int b)'
    return (a: 0, c: 0);
}
